Fixade html overflow

--- a/css/styling.css
+++ b/css/styling.css
@@ -6,13 +6,14 @@
   font-weight: normal;
   font-style: normal;
 }
- 
+html, body {
+  overflow-x: hidden; /* Prevent horizontal scrollbars */
+}
 body {
   margin: 0;
   font-family: "MyCustomFont", sans-serif;
   color: #fff;
   background-attachment: fixed;
-  overflow-x: hidden; /* Förhindrar sidrullning åt höger om sidan expanderas */
   background-color: wheat;
 }
  
@@ -125,11 +126,11 @@ body {
 @keyframes fadeInAndGrow {
   0% {
     opacity: 0;
-    transform: scale(0.8); /* Startar med halv storlek */
+    transform: scale(0.8); 
   }
   100% {
     opacity: 1;
-    transform: scale(1); /* Slutar med full storlek */
+    transform: scale(1); 
   }
 }
  
@@ -153,6 +154,8 @@ body {
   background-color: wheat;
   padding-top: 5px;
   margin-top: 50px;
+  max-width: 100%; 
+  width: 100%; 
 }
  
 main {
@@ -179,7 +182,7 @@ main {
   max-width: 400px;
   text-align: center;
   margin: 15px;
-}
+} 
  
 .colleague {
   width: 100%;
@@ -218,7 +221,6 @@ padding: 30px;
 }
    
 #gallerysection{
-  /* height: 100vh; */
   width: 1000px;
   border-radius: 50px;
   background-color: antiquewhite;
@@ -254,10 +256,10 @@ border-radius: 50px;
   padding: 20px;
   border-radius: 50px;
 }
- 
-/* #gallerysection img:hover{
+  
+#gallerysection img:hover{
   transform: scale(1.2);
-} */
+} 
  
 #gallerysection {
   max-width: 1000px;
@@ -273,7 +275,7 @@ border-radius: 50px;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
   color: crimson;
   opacity: 0.7;
-}
+} 
  
 html {
   scroll-behavior: smooth;
@@ -282,7 +284,7 @@ html {
 #oppetider-container {
   display: flex;
   gap: 1.2em;
-  width: 1000px;
+  width: 100%; /* Replace fixed width */
   justify-content: space-between;
   background-color: rgba(75, 75, 75, 0.35);
   border-style: solid;
@@ -383,9 +385,7 @@ footer {
   padding: 10px 15px;
   border-radius: 5px;
   cursor: pointer;
-}
- 
- 
+} 
 @media (max-width: 430px) {
   #main-container {
     display: flex;
@@ -442,4 +442,3 @@ footer {
   aside {
   }
 }
- 
